--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis, officia. </h1>
+    <h1>Lorem </h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, possimus libero, accusantium soluta doloribus sapiente quisquam, commodi placeat aut distinctio quos fuga totam dignissimos velit atque? Eum dolore veritatis dicta.</p>
 </body>
 </html>
